--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,33 @@
 				</configuration>
 			</plugin>
 			<plugin>
+			  <groupId>org.mule.tools.maven</groupId>
+			  <artifactId>mule-maven-plugin</artifactId>
+			  <version>2.2.1</version>
+			  <configuration>
+		          <deploymentType>cloudhub</deploymentType>
+		          <muleVersion>${mule.version}</muleVersion> 
+		          <username>${anypoint.username}</username> 
+		          <password>${anypoint.password}</password> 
+		          <applicationName>${artifactId}</applicationName>
+		          <environment>${cloundhub.env}</environment> 
+		          <businessGroup>${anypoint.businessGroup}</businessGroup>
+		          <region>us-west-2</region>
+		          <uri>${anypoint.uri}</uri> 
+		          <workerType>${cloudhub.workerType}</workerType>
+		          <workers>${cloudhub.workers}</workers>
+		        </configuration>
+		        <executions>
+		          <execution>
+		            <id>deploy</id>
+		            <phase>deploy</phase>
+		            <goals>
+		              <goal>deploy</goal>
+		            </goals>
+		          </execution>
+		        </executions>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<version>1.7</version>
