--- a/pom.xml
+++ b/pom.xml
@@ -35,16 +35,16 @@
 			  <version>2.2.1</version>
 			  <configuration>
 		          <deploymentType>cloudhub</deploymentType>
-		          <muleVersion>${mule.version}</muleVersion> 
-		          <username>${anypoint.username}</username> 
-		          <password>${anypoint.password}</password> 
-		          <applicationName>${artifactId}</applicationName>
-		          <environment>${cloundhub.env}</environment> 
-		          <businessGroup>${anypoint.businessGroup}</businessGroup>
+		          <muleVersion>3.9.0</muleVersion> 
+		          <username>glakshmanan</username> 
+		          <password>aCON50677!</password> 
+		         <!--  <applicationName>${artifactId}</applicationName>--> 
+		          <environment>Development</environment> 
+		         <!--   <businessGroup>${anypoint.businessGroup}</businessGroup>-->
 		          <region>us-west-2</region>
-		          <uri>${anypoint.uri}</uri> 
-		          <workerType>${cloudhub.workerType}</workerType>
-		          <workers>${cloudhub.workers}</workers>
+		       <!--     <uri>${anypoint.uri}</uri> -->
+		          <workerType>Micro</workerType>
+		        <!--    <workers>${cloudhub.workers}</workers>-->
 		        </configuration>
 		        <executions>
 		          <execution>
