--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.mycompany</groupId>
-	<artifactId>cicd_project</artifactId>
+	<artifactId>cicd-project</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule</packaging>
-	<name>Mule cicd_project Application</name>
+	<name>Mule cicd-project Application</name>
 
     <properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -88,15 +88,15 @@
 		          <muleVersion>3.9.0</muleVersion> 
 		          <username>glakshmanan</username> 
 		          <password>aCON50677!</password> 
-		           <applicationName>cicd_project</applicationName>
+		           <applicationName>cicd-project</applicationName>
 		          <environment>Development</environment> 
 		         <!--   <businessGroup>${anypoint.businessGroup}</businessGroup>-->
 		          <region>us-west-2</region>
 		       <!--     <uri>${anypoint.uri}</uri> -->
 		          <workerType>Micro</workerType>
 		        <!--    <workers>${cloudhub.workers}</workers>-->
-		        <application>target/cicd_project-1.0.0-SNAPSHOT.zip</application>
-       			 <applicationName>cicd_project</applicationName>
+		        <application>target/cicd-project-1.0.0-SNAPSHOT.zip</application>
+       			 <applicationName>cicd-project</applicationName>
 		        </configuration>
 		        <executions>
 		          <execution>
