--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,8 +2,8 @@ pipeline {
   agent any
   
   tools{
-	maven 'maven 3'
-	jdk 'java 8'
+	maven 'maven 3.6.1'
+	jdk 'JDK8'
 	}
   stages {
   	stage ("initialize") {
