--- a/JenkinsFile
+++ b/JenkinsFile
@@ -6,7 +6,7 @@ pipeline {
 	jdk 'JDK8'
 	}
   stages {
-  	stage ("initialize") {
+  	stage ('initialize') {
 		steps {
 		sh '''
 		echo "PATH = ${PATH}"
