--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,27 +1,15 @@
 pipeline {
   agent any
-  
-  tools{
-	maven 'Maven 3.6.1'
-	jdk 'JDK8'
-	}
   stages {
-	  	stage('initialize') {
-			steps {
-			sh '''
-			echo "PATH = ${PATH}"
-			echo "M2_HOME = ${M2_HOME}"
-			'''
-			}	
-		}
 	  	stage('Build') { 
 	      steps {
-	        sh 'mvn clean package'
+	      def mvnSettings = '/Users/Vishnu/apache-maven-3.6.1/conf/settings.xml'
+	        sh '/usr/local/Cellar/maven/3.6.1/bin/mvn clean package --settings ${mvnSettings} -P foo'
 	      }
 	    }
 	    stage('Unit Test') { 
 	      steps {
-	        sh 'mvn clean test'
+	        sh '/usr/local/Cellar/maven/3.6.1/bin/mvn clean test'
 	      }
 	    }
 	    stage('Deploy CloudHub') { 
@@ -29,7 +17,7 @@ pipeline {
 		        ANYPOINT_CREDENTIALS = credentials('anypoint.credentials')
 		      }
 		      steps {
-		        sh 'mvn deploy -P cloudhub -Dmule.version=3.9.0 -Dcloudhub.username=${ANYPOINT_CREDENTIALS_USR} -Dcloudhub.password=${ANYPOINT_CREDENTIALS_PSW} -Dcloudhub.env=Development' 
+		        sh '/usr/local/Cellar/maven/3.6.1/bin/mvn deploy -P cloudhub -Dmule.version=3.9.0 -Dcloudhub.username=${ANYPOINT_CREDENTIALS_USR} -Dcloudhub.password=${ANYPOINT_CREDENTIALS_PSW} -Dcloudhub.env=Development' 
 		      }
 	    }
   	}
