--- a/JenkinsFile
+++ b/JenkinsFile
@@ -3,13 +3,13 @@ pipeline {
   stages {
 	  	stage('Build') { 
 	      steps {
-	      def mvnSettings = '/Users/Vishnu/apache-maven-3.6.1/conf/settings.xml'
-	        sh '/usr/local/Cellar/maven/3.6.1/bin/mvn clean package --settings ${mvnSettings} -P foo'
+	      	def mvnSettings = '/Users/Vishnu/apache-maven-3.6.1/conf/settings.xml'
+	        sh "'/usr/local/Cellar/maven/3.6.1/bin/mvn' clean package --settings ${mvnSettings} -P foo"
 	      }
 	    }
 	    stage('Unit Test') { 
 	      steps {
-	        sh '/usr/local/Cellar/maven/3.6.1/bin/mvn clean test'
+	        sh "'/usr/local/Cellar/maven/3.6.1/bin/mvn' clean test"
 	      }
 	    }
 	    stage('Deploy CloudHub') { 
@@ -17,7 +17,7 @@ pipeline {
 		        ANYPOINT_CREDENTIALS = credentials('anypoint.credentials')
 		      }
 		      steps {
-		        sh '/usr/local/Cellar/maven/3.6.1/bin/mvn deploy -P cloudhub -Dmule.version=3.9.0 -Dcloudhub.username=${ANYPOINT_CREDENTIALS_USR} -Dcloudhub.password=${ANYPOINT_CREDENTIALS_PSW} -Dcloudhub.env=Development' 
+		        sh "'/usr/local/Cellar/maven/3.6.1/bin/mvn' deploy -P cloudhub -Dmule.version=3.9.0 -Dcloudhub.username=${ANYPOINT_CREDENTIALS_USR} -Dcloudhub.password=${ANYPOINT_CREDENTIALS_PSW} -Dcloudhub.env=Development" 
 		      }
 	    }
   	}
