pom file and JenkinsFile Change

--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,9 @@
             <workerType>Micro</workerType> 
             <application>target/${artifactId}-${version}.zip</application>
        			 <applicationName>${artifactId}</applicationName>
+       			 <properties>
+       			 	<mule.env>${mule.env}</mule.env>
+       			 </properties>
         </configuration>
 		        <executions>
 		          <execution>
