--- a/.classpath
+++ b/.classpath
@@ -17,6 +17,12 @@
       <attribute value="test" name="org.mule.tooling.scope"/>
     </attributes>
   </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/commons-logging/commons-logging/1.2/commons-logging-1.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.2.4/gson-2.2.4.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.1/hamcrest-core-1.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpclient/4.5.5/httpclient-4.5.5.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpcore/4.4.9/httpcore-4.4.9.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/apache/httpcomponents/httpcore-nio/4.4.6/httpcore-nio-4.4.6.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mockito/mockito-all/1.8.2/mockito-all-1.8.2.jar">
     <attributes>
       <attribute value="test" name="org.mule.tooling.scope"/>
@@ -50,6 +56,11 @@
   <classpathentry kind="var" path="M2_REPO/com/mulesoft/munit/munit-runner/1.3.9/munit-runner-1.3.9.jar">
     <attributes>
       <attribute value="test" name="org.mule.tooling.scope"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry kind="var" path="M2_REPO/com/splunk/logging/splunk-library-javalogging/1.7.2/splunk-library-javalogging-1.7.2.jar">
+    <attributes>
+      <attribute value="jar:file:/Users/Vishnu/.m2/repository/com/splunk/logging/splunk-library-javalogging/1.7.2/splunk-library-javalogging-1.7.2-javadoc.jar!/" name="javadoc_location"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="var" path="M2_REPO/xerces/xercesImpl/2.9.1/xercesImpl-2.9.1.jar">
