pom file changes

--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 					</execution>
 				</executions>
 			</plugin>
-		<plugin>
+	<!--  	<plugin>
                 <groupId>com.mulesoft.munit.tools</groupId>
                 <artifactId>munit-maven-plugin</artifactId>
                 <version>${munit.version}</version>
@@ -85,7 +85,7 @@
                         </formats>
                     </coverage>
                 </configuration>
-            </plugin>
+            </plugin>-->
             <plugin>
 			  <groupId>org.mule.tools.maven</groupId>
 			  <artifactId>mule-maven-plugin</artifactId>
@@ -217,7 +217,7 @@
             <version>${munit.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
+         <dependency>
             <groupId>com.splunk.logging</groupId>
             <artifactId>splunk-library-javalogging</artifactId>
             <version>1.7.2</version>
